--- a/tutorial/examples/bac-replication.html
+++ b/tutorial/examples/bac-replication.html
@@ -1004,7 +1004,7 @@ print(overall)
 summary_by_treated.to_csv(ANALYSIS / "output" / "tables" / "summary_stats.csv")</code></pre>
   </div>
 
-  <p>Your summary statistics table should look something like:</p>
+  <h3>Results</h3>
 
   <table style="width: 100%; border-collapse: collapse; margin: 16px 0; font-size: 0.9rem;">
     <thead>
@@ -1018,27 +1018,27 @@ summary_by_treated.to_csv(ANALYSIS / "output" / "tables" / "summary_stats.csv")<
     <tbody>
       <tr>
         <td style="padding: 8px; border: 1px solid #dee2e6;">Hit-run crashes</td>
-        <td style="padding: 8px; border: 1px solid #dee2e6; text-align: right;">45.2 (67.3)</td>
-        <td style="padding: 8px; border: 1px solid #dee2e6; text-align: right;">38.4 (58.2)</td>
-        <td style="padding: 8px; border: 1px solid #dee2e6; text-align: right;">52.1 (74.8)</td>
+        <td style="padding: 8px; border: 1px solid #dee2e6; text-align: right;">32.5 (56.1)</td>
+        <td style="padding: 8px; border: 1px solid #dee2e6; text-align: right;">29.5 (46.9)</td>
+        <td style="padding: 8px; border: 1px solid #dee2e6; text-align: right;">37.5 (69.0)</td>
       </tr>
       <tr>
         <td style="padding: 8px; border: 1px solid #dee2e6;">Non-hit-run crashes</td>
-        <td style="padding: 8px; border: 1px solid #dee2e6; text-align: right;">812 (892)</td>
-        <td style="padding: 8px; border: 1px solid #dee2e6; text-align: right;">856 (934)</td>
-        <td style="padding: 8px; border: 1px solid #dee2e6; text-align: right;">768 (847)</td>
+        <td style="padding: 8px; border: 1px solid #dee2e6; text-align: right;">820 (804)</td>
+        <td style="padding: 8px; border: 1px solid #dee2e6; text-align: right;">806 (738)</td>
+        <td style="padding: 8px; border: 1px solid #dee2e6; text-align: right;">846 (908)</td>
       </tr>
       <tr>
         <td style="padding: 8px; border: 1px solid #dee2e6;">Unemployment (%)</td>
-        <td style="padding: 8px; border: 1px solid #dee2e6; text-align: right;">5.6 (1.8)</td>
-        <td style="padding: 8px; border: 1px solid #dee2e6; text-align: right;">5.8 (1.9)</td>
-        <td style="padding: 8px; border: 1px solid #dee2e6; text-align: right;">5.4 (1.7)</td>
+        <td style="padding: 8px; border: 1px solid #dee2e6; text-align: right;">5.7 (2.0)</td>
+        <td style="padding: 8px; border: 1px solid #dee2e6; text-align: right;">6.1 (2.2)</td>
+        <td style="padding: 8px; border: 1px solid #dee2e6; text-align: right;">5.0 (1.3)</td>
       </tr>
       <tr>
         <td style="padding: 8px; border: 1px solid #dee2e6;">N (state-years)</td>
         <td style="padding: 8px; border: 1px solid #dee2e6; text-align: right;">1,350</td>
-        <td style="padding: 8px; border: 1px solid #dee2e6; text-align: right;">675</td>
-        <td style="padding: 8px; border: 1px solid #dee2e6; text-align: right;">675</td>
+        <td style="padding: 8px; border: 1px solid #dee2e6; text-align: right;">856</td>
+        <td style="padding: 8px; border: 1px solid #dee2e6; text-align: right;">494</td>
       </tr>
     </tbody>
   </table>
