--- a/tutorial/causal-inference.html
+++ b/tutorial/causal-inference.html
@@ -271,58 +271,61 @@ model = smf.ols('wages ~ attended_mit + sat_score', data=df).fit()</code></pre>
 
   <!-- DiD Visual -->
   <div style="margin: 30px 0; text-align: center;">
-    <svg viewBox="0 0 450 280" style="max-width: 450px; width: 100%;">
+    <svg viewBox="0 0 560 330" style="max-width: 560px; width: 100%;">
       <!-- Axes -->
-      <line x1="60" y1="220" x2="400" y2="220" stroke="#333" stroke-width="2"/>
-      <line x1="60" y1="220" x2="60" y2="40" stroke="#333" stroke-width="2"/>
+      <line x1="65" y1="270" x2="420" y2="270" stroke="#333" stroke-width="2"/>
+      <line x1="65" y1="270" x2="65" y2="25" stroke="#333" stroke-width="2"/>
 
       <!-- Y-axis label -->
-      <text x="30" y="130" text-anchor="middle" font-size="12" fill="#333" transform="rotate(-90, 30, 130)">Employment</text>
+      <text x="25" y="148" text-anchor="middle" font-size="13" fill="#333" transform="rotate(-90, 25, 148)">Outcome</text>
 
-      <!-- X-axis labels -->
-      <text x="140" y="245" text-anchor="middle" font-size="11" fill="#333">Before Policy</text>
-      <text x="320" y="245" text-anchor="middle" font-size="11" fill="#333">After Policy</text>
+      <!-- Pre/Post labels -->
+      <text x="158" y="290" text-anchor="middle" font-size="11" fill="#555">Pre-treatment</text>
+      <text x="335" y="290" text-anchor="middle" font-size="11" fill="#555">Post-treatment</text>
 
-      <!-- Treatment line (pre) -->
-      <line x1="100" y1="160" x2="180" y2="160" stroke="#27ae60" stroke-width="3"/>
-      <circle cx="100" cy="160" r="5" fill="#27ae60"/>
-      <circle cx="180" cy="160" r="5" fill="#27ae60"/>
+      <!-- Treatment vertical line -->
+      <line x1="250" y1="25" x2="250" y2="270" stroke="#555" stroke-width="1.5" stroke-dasharray="6,4"/>
+      <text x="250" y="18" text-anchor="middle" font-size="10" fill="#555" font-style="italic">Treatment</text>
 
-      <!-- Treatment line (post - actual) -->
-      <line x1="280" y1="100" x2="360" y2="100" stroke="#27ae60" stroke-width="3"/>
-      <circle cx="280" cy="100" r="5" fill="#27ae60"/>
-      <circle cx="360" cy="100" r="5" fill="#27ae60"/>
+      <!-- Control group (teal, solid throughout) -->
+      <line x1="85" y1="240" x2="415" y2="150" stroke="#009688" stroke-width="2.8"/>
 
-      <!-- Control line (pre) -->
-      <line x1="100" y1="180" x2="180" y2="180" stroke="#2196f3" stroke-width="3"/>
-      <circle cx="100" cy="180" r="5" fill="#2196f3"/>
-      <circle cx="180" cy="180" r="5" fill="#2196f3"/>
+      <!-- Treatment group pre-treatment (purple, solid, parallel to control) -->
+      <line x1="85" y1="195" x2="250" y2="150" stroke="#7B1FA2" stroke-width="2.8"/>
 
-      <!-- Control line (post) -->
-      <line x1="280" y1="150" x2="360" y2="150" stroke="#2196f3" stroke-width="3"/>
-      <circle cx="280" cy="150" r="5" fill="#2196f3"/>
-      <circle cx="360" cy="150" r="5" fill="#2196f3"/>
+      <!-- Counterfactual (orange, dashed - continues pre-treatment trend) -->
+      <line x1="250" y1="150" x2="415" y2="105" stroke="#E65100" stroke-width="2.8" stroke-dasharray="10,6"/>
 
-      <!-- Counterfactual (dashed) -->
-      <line x1="180" y1="160" x2="280" y2="130" stroke="#27ae60" stroke-width="2" stroke-dasharray="5,5"/>
-      <line x1="280" y1="130" x2="360" y2="130" stroke="#27ae60" stroke-width="2" stroke-dasharray="5,5"/>
+      <!-- Treatment group post-treatment actual (purple, solid - diverges upward) -->
+      <line x1="250" y1="150" x2="415" y2="50" stroke="#7B1FA2" stroke-width="2.8"/>
 
-      <!-- DiD effect bracket -->
-      <line x1="370" y1="100" x2="370" y2="130" stroke="#750014" stroke-width="2"/>
-      <line x1="365" y1="100" x2="375" y2="100" stroke="#750014" stroke-width="2"/>
-      <line x1="365" y1="130" x2="375" y2="130" stroke="#750014" stroke-width="2"/>
-      <text x="385" y="118" font-size="10" fill="#750014" font-weight="bold">DiD</text>
+      <!-- Dots at treatment time -->
+      <circle cx="250" cy="195" r="4" fill="#009688"/>
+      <circle cx="250" cy="150" r="4" fill="#7B1FA2"/>
+
+      <!-- Treatment Effect bracket -->
+      <line x1="425" y1="52" x2="425" y2="103" stroke="#333" stroke-width="1.5"/>
+      <line x1="420" y1="52" x2="430" y2="52" stroke="#333" stroke-width="1.5"/>
+      <line x1="420" y1="103" x2="430" y2="103" stroke="#333" stroke-width="1.5"/>
+      <text x="438" y="72" font-size="10" fill="#333" font-weight="bold">Treatment</text>
+      <text x="438" y="84" font-size="10" fill="#333" font-weight="bold">effect</text>
+
+      <!-- Constant difference bracket (parallel trends) -->
+      <line x1="425" y1="109" x2="425" y2="148" stroke="#555" stroke-width="1.2" stroke-dasharray="3,2"/>
+      <line x1="420" y1="109" x2="430" y2="109" stroke="#555" stroke-width="1.2"/>
+      <line x1="420" y1="148" x2="430" y2="148" stroke="#555" stroke-width="1.2"/>
+      <text x="438" y="125" font-size="9" fill="#555">Parallel</text>
+      <text x="438" y="136" font-size="9" fill="#555">trends</text>
 
       <!-- Legend -->
-      <line x1="100" y1="265" x2="130" y2="265" stroke="#27ae60" stroke-width="3"/>
-      <text x="140" y="269" font-size="10" fill="#333">Treatment (eligible schools)</text>
-      <line x1="280" y1="265" x2="310" y2="265" stroke="#2196f3" stroke-width="3"/>
-      <text x="320" y="269" font-size="10" fill="#333">Control (ineligible schools)</text>
-
-      <!-- Policy line -->
-      <line x1="230" y1="40" x2="230" y2="220" stroke="#750014" stroke-width="1" stroke-dasharray="3,3"/>
-      <text x="230" y="30" text-anchor="middle" font-size="10" fill="#750014">Scholarship starts</text>
+      <line x1="70" y1="315" x2="100" y2="315" stroke="#009688" stroke-width="3"/>
+      <text x="105" y="319" font-size="10" fill="#333">Control group</text>
+      <line x1="195" y1="315" x2="225" y2="315" stroke="#7B1FA2" stroke-width="3"/>
+      <text x="230" y="319" font-size="10" fill="#333">Treatment group</text>
+      <line x1="345" y1="315" x2="375" y2="315" stroke="#E65100" stroke-width="3" stroke-dasharray="10,6"/>
+      <text x="380" y="319" font-size="10" fill="#333">Counterfactual</text>
     </svg>
+    <p style="font-size: 0.85rem; color: var(--muted); margin-top: 8px;">The treatment effect is the gap between the actual outcome and the counterfactual (what would have happened without treatment). Parallel trends means the gap between the two groups would have stayed constant absent treatment.</p>
   </div>
 
   <h3>The Parallel Trends Assumption</h3>
@@ -370,7 +373,7 @@ reghdfe wages pre5-pre2 post0-post5, absorb(school year) cluster(school)
 
 * If pre-period coefficients are near zero, parallel trends is plausible</code></pre>
     <pre class="code-content r"><code class="language-r"># Check pre-trends with an event study
-pacman::p_load(fixest)
+pacman::p_load(fixest, ggfixest)
 
 # IMPORTANT: Never-treated units don't have a "time to treatment"
 # Set them to -1000 and exclude with ref = c(-1, -1000)
@@ -386,7 +389,7 @@ es <- feols(wages ~ i(time_to_treat, ever_treated, ref = c(-1, -1000)) |
             school + year, data = df, cluster = ~school)
 
 # Plot coefficients
-iplot(es)
+p <- ggiplot(es)
 
 # If pre-period coefficients are near zero, parallel trends is plausible</code></pre>
     <pre class="code-content python"><code class="language-python"># Check pre-trends with an event study
