--- a/tutorial/worked-examples/texting-bans-event-study.html
+++ b/tutorial/worked-examples/texting-bans-event-study.html
@@ -191,20 +191,24 @@ summarize fatals</code></pre>
     <pre class="code-content r"><code class="language-r"># Load and combine all years
 pacman::p_load(tidyverse)
 
-fars_data <- map_dfr(2007:2022, function(year) {
-  read_csv(paste0("data/raw/accident_", year, ".csv"),
-           show_col_types = FALSE) |>
-    select(STATE, STATENAME, YEAR, MONTH, FATALS) |>
+fars_list <- list()
+for (year in 2007:2022) {
+  fars_list[[as.character(year)]] <- read_csv(
+    paste0("data/raw/accident_", year, ".csv"),
+    show_col_types = FALSE
+  ) %>%
+    select(STATE, STATENAME, YEAR, MONTH, FATALS) %>%
     rename_all(tolower)
-})
+}
+fars_data <- bind_rows(fars_list)
 
 # Save combined data
 write_csv(fars_data, "data/clean/fars_all_years.csv")
 
 # Check the data
-fars_data |> count(year)
-fars_data |> summarize(mean_fatals = mean(fatals),
-                       total_fatals = sum(fatals))</code></pre>
+fars_data %>% count(year)
+fars_data %>% summarize(mean_fatals = mean(fatals),
+                        total_fatals = sum(fatals))</code></pre>
     <pre class="code-content python"><code class="language-python">import pandas as pd
 
 # Load and combine all years
@@ -401,8 +405,8 @@ tab event_time if event_time != -999
 
 save "data/clean/analysis_data.dta", replace</code></pre>
     <pre class="code-content r"><code class="language-r"># Merge fatality data with policy dates
-analysis_data <- state_year |>
-  left_join(policy, by = "state") |>
+analysis_data <- state_year %>%
+  merge(policy, by = "state", all.x = TRUE) %>%
   mutate(
     # Ever-treated indicator (1 if state ever adopts, 0 if never)
     ever_treated = !is.na(texting_ban_year),
@@ -422,8 +426,8 @@ analysis_data <- state_year |>
   )
 
 # Check treatment timing
-analysis_data |> count(texting_ban_year)
-analysis_data |> filter(event_time != -1000) |> count(event_time)
+analysis_data %>% count(texting_ban_year)
+analysis_data %>% filter(event_time != -1000) %>% count(event_time)
 
 write_csv(analysis_data, "data/clean/analysis_data.csv")</code></pre>
     <pre class="code-content python"><code class="language-python">import numpy as np
@@ -540,59 +544,51 @@ save "data/clean/analysis_data.dta", replace</code></pre>
 # Each state has a FRED series: e.g., "ALUR" for Alabama unemployment
 pacman::p_load(tidyverse)
 
-# State abbreviations for FRED series
-state_codes <- c(
-  "AL", "AK", "AZ", "AR", "CA", "CO", "CT", "DE", "FL", "GA",
-  "HI", "ID", "IL", "IN", "IA", "KS", "KY", "LA", "ME", "MD",
-  "MA", "MI", "MN", "MS", "MO", "MT", "NE", "NV", "NH", "NJ",
-  "NM", "NY", "NC", "ND", "OH", "OK", "OR", "PA", "RI", "SC",
-  "SD", "TN", "TX", "UT", "VT", "VA", "WA", "WV", "WI", "WY"
-)
+# Load state FIPS mapping (maps numeric FIPS codes to state abbreviations)
+state_fips_map <- read_csv("state_fips_map.csv", show_col_types = FALSE)
 
 # Download unemployment (series: [ST]UR)
-all_unemp <- map_dfr(state_codes, function(st) {
+unemp_frames <- list()
+for (i in seq_len(nrow(state_fips_map))) {
+  st <- state_fips_map$state_abbr[i]
   url <- paste0("https://fred.stlouisfed.org/graph/fredgraph.csv?id=", st, "UR")
   tryCatch({
     df <- read_csv(url, show_col_types = FALSE)
     names(df) <- c("date", "unemployment")
-    df |>
-      mutate(year = as.integer(substr(date, 1, 4))) |>
-      filter(year >= 2007, year <= 2022) |>
-      group_by(year) |>
-      summarise(unemployment = mean(unemployment, na.rm = TRUE)) |>
-      mutate(state_abbr = st)
+    df <- df %>%
+      mutate(year = as.integer(substr(date, 1, 4))) %>%
+      filter(year >= 2007, year <= 2022) %>%
+      group_by(year) %>%
+      summarise(unemployment = mean(unemployment, na.rm = TRUE)) %>%
+      mutate(state = state_fips_map$state[i])
+    unemp_frames[[length(unemp_frames) + 1]] <- df
   }, error = function(e) NULL)
-})
+}
+all_unemp <- bind_rows(unemp_frames)
 
 # Download per capita income (series: [ST]PCPI)
-all_income <- map_dfr(state_codes, function(st) {
+income_frames <- list()
+for (i in seq_len(nrow(state_fips_map))) {
+  st <- state_fips_map$state_abbr[i]
   url <- paste0("https://fred.stlouisfed.org/graph/fredgraph.csv?id=", st, "PCPI")
   tryCatch({
     df <- read_csv(url, show_col_types = FALSE)
     names(df) <- c("date", "income")
-    df |>
-      mutate(year = as.integer(substr(date, 1, 4))) |>
-      filter(year >= 2007, year <= 2022) |>
-      group_by(year) |>
-      summarise(income = mean(income, na.rm = TRUE)) |>
-      mutate(state_abbr = st)
+    df <- df %>%
+      mutate(year = as.integer(substr(date, 1, 4))) %>%
+      filter(year >= 2007, year <= 2022) %>%
+      group_by(year) %>%
+      summarise(income = mean(income, na.rm = TRUE)) %>%
+      mutate(state = state_fips_map$state[i])
+    income_frames[[length(income_frames) + 1]] <- df
   }, error = function(e) NULL)
-})
+}
+all_income <- bind_rows(income_frames)
 
-# Merge to analysis data (need state abbreviation mapping)
-# FARS uses numeric FIPS codes in the 'state' column
-state_fips_map <- tibble(
-  state = c(1,2,4,5,6,8,9,10,12,13,15,16,17,18,19,20,21,22,23,24,
-            25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,
-            44,45,46,47,48,49,50,51,53,54,55,56),
-  state_abbr = state_codes
-)
-
-analysis_data <- analysis_data |>
-  left_join(state_fips_map, by = "state") |>
-  left_join(all_unemp, by = c("state_abbr", "year")) |>
-  left_join(all_income, by = c("state_abbr", "year")) |>
-  select(-state_abbr)
+# Merge controls to analysis data
+analysis_data <- analysis_data %>%
+  merge(all_unemp, by = c("state", "year"), all.x = TRUE) %>%
+  merge(all_income, by = c("state", "year"), all.x = TRUE)
 
 write_csv(analysis_data, "data/clean/analysis_data.csv")</code></pre>
     <pre class="code-content python"><code class="language-python"># Download state unemployment and income from FRED
@@ -707,17 +703,10 @@ forvalues k = -6/6 {
 
 * Verify: never-treated states should have all zeros
 summarize et_* if missing(texting_ban_year)</code></pre>
-    <pre class="code-content r"><code class="language-r"># Bin endpoints (but keep never-treated at -1000)
-analysis_data <- analysis_data |>
-  mutate(
-    event_time_binned = case_when(
-      event_time == -1000 ~ -1000,  # Never-treated: keep at -1000
-      event_time <= -6 ~ -6,        # Bin early periods
-      event_time >= 6 ~ 6,          # Bin late periods
-      TRUE ~ event_time
-    )
-  )
-
+    <pre class="code-content r"><code class="language-r"># In fixest, we use the bin argument inside i() to bin endpoints
+# instead of manually creating a binned variable with case_when.
+# This is cleaner and less error-prone.
+#
 # Why -1000 for never-treated?
 # Never-treated states don't have a treatment year, so "years since treatment"
 # is undefined. We can't just drop them (we need them as controls).
@@ -773,25 +762,32 @@ estimates store event_study
 
 * Display results
 esttab event_study, se keep(et_*) ///
-    title("Event Study: Effect of Texting Bans on Log Fatalities")</code></pre>
+    title("Event Study: Effect of Texting Bans on Log Fatalities")
+
+* Alternative: xtevent simplifies event studies
+* ssc install xtevent
+* xtevent ln_fatalities unemployment income, ///
+*     policyvar(treated) panelvar(state) timevar(year) ///
+*     window(6) cluster(state)
+* xteventplot, title("Event Study: Texting Bans (xtevent)")</code></pre>
     <pre class="code-content r"><code class="language-r"># Install fixest if needed
 # install.packages("fixest")
-pacman::p_load(fixest)
+pacman::p_load(fixest, ggfixest)
 
 # Log transform outcome
-analysis_data <- analysis_data |>
+analysis_data <- analysis_data %>%
   mutate(ln_fatalities = log(fatalities))
 
 # Event study with two-way fixed effects
-# i(event_time_binned, ever_treated, ref = c(-1, -1000)) means:
-#   - event_time_binned: the relative time variable
-#   - ever_treated: interaction term (1 for treated states, 0 for never-treated)
-#   - ref = c(-1, -1000): exclude BOTH t=-1 (reference period) AND
-#                         t=-1000 (never-treated states)
+# i(event_time, ...) creates event-time dummies
+# bin = .("-6+" = ~x <= -6, "6+" = ~x >= 6) bins the endpoints
+# ref = c(-1, -1000) excludes t=-1 (reference) AND t=-1000 (never-treated)
 #
 # See: https://lrberge.github.io/fixest/articles/fixest_walkthrough.html
 event_study <- feols(
-  ln_fatalities ~ i(event_time_binned, ever_treated, ref = c(-1, -1000)) + unemployment + income | state + year,
+  ln_fatalities ~ i(event_time, ever_treated, ref = c(-1, -1000),
+                    bin = .("-6+" = ~x <= -6, "6+" = ~x >= 6)) +
+    unemployment + income | state + year,
   data = analysis_data,
   cluster = ~state
 )
@@ -891,30 +887,29 @@ coefplot event_study, ///
     graphregion(color(white)) bgcolor(white)
 
 graph export "output/event_study.png", replace width(1200)</code></pre>
-    <pre class="code-content r"><code class="language-r"># fixest has a built-in event study plot function
-iplot(event_study,
-      xlab = "Years Relative to Texting Ban",
-      ylab = "Effect on Log Fatalities",
-      main = "Event Study: Texting Bans and Traffic Fatalities")
+    <pre class="code-content r"><code class="language-r"># Quick event study plot with ggiplot (one line!)
+pacman::p_load(ggfixest)
+p <- ggiplot(event_study,
+        xlab = "Years Relative to Texting Ban",
+        ylab = "Effect on Log Fatalities",
+        main = "Event Study: Texting Bans and Traffic Fatalities")
+ggsave("output/event_study_quick.png", p, width = 10, height = 6, dpi = 300)
 
-# Add reference line at zero
-abline(h = 0, lty = 2, col = "red")
-
-# For a publication-quality plot with ggplot2:
+# For a more customized publication-quality plot:
 pacman::p_load(broom, ggplot2)
 
 # Extract coefficients
-coef_df <- tidy(event_study, conf.int = TRUE) |>
-  filter(str_detect(term, "event_time")) |>
+coef_df <- tidy(event_study, conf.int = TRUE) %>%
+  filter(str_detect(term, "event_time")) %>%
   mutate(
     event_time = as.numeric(str_extract(term, "-?\\d+"))
-  ) |>
+  ) %>%
   # Add the reference period (t = -1)
   bind_rows(tibble(event_time = -1, estimate = 0,
                    conf.low = 0, conf.high = 0))
 
 # Create plot
-ggplot(coef_df, aes(x = event_time, y = estimate)) +
+p <- ggplot(coef_df, aes(x = event_time, y = estimate)) +
   geom_hline(yintercept = 0, linetype = "dashed", color = "red") +
   geom_vline(xintercept = -0.5, linetype = "dashed", color = "gray") +
   geom_pointrange(aes(ymin = conf.low, ymax = conf.high)) +
@@ -930,7 +925,7 @@ ggplot(coef_df, aes(x = event_time, y = estimate)) +
     plot.title = element_text(hjust = 0.5)
   )
 
-ggsave("output/event_study.png", width = 10, height = 6, dpi = 300)</code></pre>
+ggsave("output/event_study.png", p, width = 10, height = 6, dpi = 300)</code></pre>
     <pre class="code-content python"><code class="language-python">import matplotlib.pyplot as plt
 
 # Extract coefficients and confidence intervals
