Add Past 14.33 Papers section to finding-project tutorial
- Added simple list of 7 past 14.33 papers from UEA Journal
- Each entry includes title, direct PDF link with page anchor, and page range
- Kept minimal formatting - just a bulleted list as requested

--- a/tutorial/finding-project.html
+++ b/tutorial/finding-project.html
@@ -630,3 +630,19 @@ current_page: finding-project
     <p style="margin: 0;">The best way to learn what makes a viable project is to read papers in your area of interest. Pay attention to: What's the identification strategy? Where did they get the data? Could you do something similar with a different policy or outcome?</p>
   </div>
 </section>
+
+<section id="past-papers" class="tutorial-section">
+  <h2>Past 14.33 Papers</h2>
+
+  <p>These papers from past 14.33 students are published in the UEA Journal:</p>
+
+  <ul>
+    <li><a href="https://economics.mit.edu/sites/default/files/inline-files/UEA%20Journal%202024-2025.pdf#page=9" target="_blank">Income Gaps and Political Divides: Local Inequality's Effect on Local Election Polarization</a> (pp. 9-36)</li>
+    <li><a href="https://economics.mit.edu/sites/default/files/inline-files/UEA%20Journal%202024-2025.pdf#page=37" target="_blank">The Impact of Autism Therapy Coverage Mandates on Outcomes for Autistic Children</a> (pp. 37-62)</li>
+    <li><a href="https://economics.mit.edu/sites/default/files/inline-files/UEA%20Journal%202024-2025.pdf#page=63" target="_blank">Assessing the Impact of Project Green Light: A Google Sustainability Initiative to Reduce City Air Pollution</a> (pp. 63-88)</li>
+    <li><a href="https://economics.mit.edu/sites/default/files/inline-files/UEA%20Journal%202023-2024_1.pdf#page=87" target="_blank">Assessing the Impact of Police Officer Line-of-Duty Deaths and Force Size on Civilian Arrests</a> (pp. 87-100)</li>
+    <li><a href="https://economics.mit.edu/sites/default/files/inline-files/UEA%20Journal%202023-2024_1.pdf#page=129" target="_blank">An Empirical Analysis of the 3-Points-for-a-Win Rule in the English Premier League</a> (pp. 129-147)</li>
+    <li><a href="https://economics.mit.edu/sites/default/files/2022-08/UEA%20Journal%202020-2021.pdf#page=11" target="_blank">A Rising Tide for All or Wave for One?: The Effect of Charter School Competition on District Achievement</a> (pp. 11-32)</li>
+    <li><a href="https://economics.mit.edu/sites/default/files/2022-08/UEA%20Journal%202019-2020.pdf#page=46" target="_blank">Post-Earnings Announcement Drift</a> (pp. 46-72)</li>
+  </ul>
+</section>
